fix: nav overflow

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,22 @@
   font-family: 'Cabin', sans-serif;
 }
 
+.container {
+  padding: 0;
+  margin: 0;
+  min-width: 100vw;
+  min-height: 100vh;
+}
+
+.navbar {
+  width: 100%;
+  max-height: 100px;
+}
+
+.navbar .nav-link {
+  font-size: 1rem;
+}
+
 .navbar,
 .linksContainer {
   display: flex;
@@ -56,4 +72,5 @@
 
 .linksContainer {
   gap: 1.5em;
+  flex-wrap: wrap;
 }
